--- a/app/views/projects/list.html.erb
+++ b/app/views/projects/list.html.erb
@@ -9,12 +9,14 @@
 <%= page_links @projects %>
 <table class="list_tb">
   <tr class="title">
-    <td style="width:20%;">项目名称</td>
-    <td>项目时间</td>
+    <td style="width:10%;">项目名称</td>
+    <td style="width:3%;">排序数</td>
+    <td style="width:8%;">项目时间</td>
+    <td>项目概述</td>
     <td>项目描述</td>
     <td>技术特点</td>
     <td>系统配置</td>
-    <td>操作</td>
+    <td style="width:8%;">操作</td>
   </tr>
   <% @projects.each do |p| -%>
       <tr>
@@ -22,7 +24,9 @@
           <%= check_box_tag "ids", p.id, nil, {:class => "chk"} -%>
           <%= link_to p.name, {:action => "show", :id => p.id, :format => "php"}, :target => "_blank" -%>
         </td>
+        <td><%= p.order_num.to_i -%></td>
         <td><%= p.project_date -%></td>
+        <td><%= truncate(p.summary) -%></td>
         <td><%= truncate(p.description) -%></td>
         <td><%= truncate(p.tech_info) -%></td>
         <td><%= truncate(p.system_config) -%></td>
