--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,7 +3,8 @@
     项目案例
   </div>
   <div class="breadcrumb">
-    <a href="/index.php">首页</a>&nbsp;/&nbsp;<a href="/projects.php">成功案例</a>&nbsp;/&nbsp;<%= @title -%>
+    <a href="/index.php">首页</a>&nbsp;/&nbsp;<a href="/services.php">主营业务</a>&nbsp;/&nbsp;
+    <a href="/projects/case_list.php?cat=<%= @project.category_id -%>"><%= @m_title -%></a>&nbsp;/&nbsp;<%= @title -%>
   </div>
 </div>
 <div class="content_area">
@@ -13,7 +14,6 @@
         <h3>
           <%= @project.name -%>
         </h3>
-
         <p>
           <%= @project.description -%>
         </p>
