网站样式修改

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -24,7 +24,7 @@
     <div class="gossips_area">思创工程是专业从事自动控制系统集成与服务、建筑智能化系统集成与服务、节能及运维服务的高科技公司。<br/>
       <a href="/introduction.php" target="_blank">详细 ›</a></div>
     <div class="news_box">
-      <font style="color:black;">成功案例</font><br/>
+      <font style="color:black;font-size: 15px;">成功案例</font><br/>
       <% unless @projects.blank? -%>
           <% @projects.each do |p| -%>
               <p>
