--- a/app/views/projects/case_list.html.erb
+++ b/app/views/projects/case_list.html.erb
@@ -4,7 +4,7 @@
 
   </div>
   <div class="breadcrumb">
-    <a href="index.php">首页</a>&nbsp;/&nbsp;<a href="/services.php"><%= @m_title -%></a>&nbsp;/&nbsp;<%= @title -%>
+    <a href="/">首页</a>&nbsp;/&nbsp;<a href="/services.php"><%= @m_title -%></a>&nbsp;/&nbsp;<%= @title -%>
   </div>
 </div>
 <div class="content_area">
