--- a/app/views/main/ceo.html.erb
+++ b/app/views/main/ceo.html.erb
@@ -10,7 +10,7 @@
 <div class="content_area">
   <div class="content_mid_area">
     <div class="culture_banner">
-      <img src="/images/culture.jpg" alt="Our Culture" width="902" height="238">
+      <img src="/images/spirit2.jpg" alt="Our Culture" width="902" height="238">
     </div>
 
     <%= render :partial => "left_menu" -%>
@@ -18,6 +18,7 @@
       <h3 style="top: -2px; left: -2px; font-size: 14px;border-bottom: 1px solid #DBDBDB;">
         总经理致辞
       </h3>
+      <!--<img src="/images/spirit.jpg" width="451" height="283">-->
       <p style="text-indent: 0;">各位同仁：</p>
       <p>1997年10月，“思创”号的小船起航了！</p>
       <p>流光岁月，一路上，有阳光、鲜花与掌声，也历经风雨、暗礁与骇浪。“思创”依然前行，并且由小变大！</p>
