--- a/app/views/cars/register_list.html.erb
+++ b/app/views/cars/register_list.html.erb
@@ -11,8 +11,8 @@
         </td>
       </tr>
       <tr>
-        <td>使用时间： &ge;<%= text_field_tag :begin_time_gte, params[:begin_time_gte], :class => "datepicker" %>
-          &le;<%= text_field_tag :begin_time_lte, params[:begin_time_lte], :class => "datepicker" %></td>
+        <td>使用时间： &ge;<%= text_field_tag :begin_time_gte, params[:begin_time_gte], :class => "dtimepicker" %>
+          &le;<%= text_field_tag :begin_time_lte, params[:begin_time_lte], :class => "dtimepicker" %></td>
         <td>
           <%= submit_tag "搜索", :class => "btn" %>
         </td>
