--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -27,29 +27,29 @@
   <ul class="box">
     <li style="background-image: url(/images/boxbg.jpg);">
       <div class="bcont">
-        <a href="/projects/case_list?cat=1"><img src="/images/bp1.jpg"></a>
-        <h3><a href="/projects/case_list?cat=1" style="color: rgb(0, 0, 0);">自动化</a></h3>
+        <a href="<%= auto_link(1) -%>"><img src="/images/bp1.jpg"></a>
+        <h3><a href="<%= auto_link(1) -%>" style="color: rgb(0, 0, 0);">自动化</a></h3>
         <p style="color: rgb(102, 102, 102);">提供集控制、优化、调度、管理、经营于一体的综合自动化解决方案</p>
       </div>
     </li>
     <li style="background-image: url(/images/boxbg.jpg);">
       <div class="bcont">
-        <a href="/projects/case_list?cat=3"><img src="/images/bp2.jpg"></a>
-        <h3><a href="/projects/case_list?cat=3" style="color: rgb(0, 0, 0);">信息化</a></h3>
+        <a href="<%= auto_link(2) -%>"><img src="/images/bp2.jpg"></a>
+        <h3><a href="<%= auto_link(2) -%>" style="color: rgb(0, 0, 0);">信息化</a></h3>
         <p style="color: rgb(102, 102, 102);">提供公用工程信息化领域的产品、服务及智慧城市信息化解决方案</p>
       </div>
     </li>
     <li style="background-image: url(/images/boxbg.jpg);">
       <div class="bcont">
-        <a href="/projects/case_list?cat=5"><img src="/images/bp6.jpg"></a>
-        <h3><a href="/projects/case_list?cat=5" style="color: rgb(0, 0, 0);">智能化</a></h3>
+        <a href="<%= auto_link(3) -%>"><img src="/images/bp6.jpg"></a>
+        <h3><a href="<%= auto_link(3) -%>" style="color: rgb(0, 0, 0);">智能化</a></h3>
         <p style="color: rgb(102, 102, 102);">提供化工和建设工程方面的工程设计、咨询服务</p>
       </div>
     </li>
     <li style="background-image: url(/images/boxbg.jpg);">
       <div class="bcont">
-        <a href="/projects/case_list?cat=4"><img src="/images/bp3.jpg"></a>
-        <h3><a href="/projects/case_list?cat=4" style="color: rgb(0, 0, 0);">节能及维保</a></h3>
+        <a href="<%= auto_link(4) -%>"><img src="/images/bp3.jpg"></a>
+        <h3><a href="<%= auto_link(4) -%>" style="color: rgb(0, 0, 0);">节能及维保</a></h3>
         <p style="color: rgb(102, 102, 102);">提供数字化医院建设、区域卫生信息化、智能化健康管理解决方案</p>
       </div>
     </li>
