样式文件路径问题

--- a/app/views/layouts/admin.erb
+++ b/app/views/layouts/admin.erb
@@ -13,8 +13,8 @@
   <script type="text/javascript" src="/assets/common.js"></script>
   <script type="text/javascript" src="/assets/underscore-min.js"></script>
   <script src="/bootstrap/js/bootstrap.min.js"></script>
-  <link href="/assets/application.css?body=1" media="all" rel="stylesheet" type="text/css">
-  <link href="/assets/projects.css" rel="stylesheet" type="text/css">
+  <link href="/stylesheets/application.css" media="all" rel="stylesheet" type="text/css">
+  <link href="/stylesheets/projects.css" rel="stylesheet" type="text/css">
   <%= csrf_meta_tags %>
 </head>
 <body>
