js无法读取的问题

--- a/app/views/layouts/admin.erb
+++ b/app/views/layouts/admin.erb
@@ -10,8 +10,8 @@
   <link type="text/css" href="/jquery/css/redmond/jquery-ui-1.8.23.custom.css" rel="stylesheet"/>
   <script type="text/javascript" src="/jquery/js/jquery-1.8.0.min.js"></script>
   <script type="text/javascript" src="/jquery/js/jquery-ui-1.8.23.custom.min.js"></script>
-  <script type="text/javascript" src="/assets/common.js"></script>
-  <script type="text/javascript" src="/assets/underscore-min.js"></script>
+  <script type="text/javascript" src="/jquery/common.js"></script>
+  <script type="text/javascript" src="/jquery/underscore-min.js"></script>
   <script src="/bootstrap/js/bootstrap.min.js"></script>
   <link href="/stylesheets/application.css" media="all" rel="stylesheet" type="text/css">
   <link href="/stylesheets/projects.css" rel="stylesheet" type="text/css">
