--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,14 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title><%= ['南昌思创工程技术有限公司', @sys_title, @title].compact.join(' - ') %></title>
-  <meta name="Description" content="南昌思创工程技术有限公司"/>
-  <meta name="Keywords" content=""/>
+  <meta name="Description" content="南昌思创工程技术有限公司是专业从事自动控制系统集成与服务、建筑智能化系统集成与服务、节能及运维服务的高科技公司。"/>
+  <meta name="Keywords" content="南昌思创,工程,工程技术,自来水厂,污水处理厂,机电,自动化,节能,维保" />
+  <meta name="Robots" content="index, follow" />
+  <meta name="Rating" content="General" />
+  <meta name="Revisit-After" content="7 days" />
+  <meta name="Copyright" content="南昌思创工程技术有限公司" />
+  <meta name="Author" content="南昌思创" />
+  <meta name="Distribution" content="China" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
   <link href="/stylesheets/screen.css" rel="stylesheet" type="text/css"/>
   <link href="/stylesheets/index.css" rel="stylesheet" type="text/css"/>
