--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,11 +75,6 @@
   </div>
 </div>
 <div id="wrapper">
-
-
-
-
-
   <% if params[:action] == "index" -%>
       <%= yield -%>
   <% else -%>
@@ -135,6 +130,7 @@
     <div class="footer_social_icons">
       <dl>
         <dd>南昌思创工程技术有限公司 版权所有</dd>
+        <dd><a href="http://www.miitbeian.gov.cn/" target="_blank" class="beian">赣ICP备13001691号</a></dd>
         <dd>Copyright &copy; <%= Time.now.year -%>, Strong Co.ltd, All Rights Reserved</dd>
       </dl>
     </div>
