--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -220,3 +220,12 @@ html ul.topnav li ul.subnav li a:hover {
     /*--Hover effect for subnav links--*/
     background-color: #AFD5E7;
 }
+
+a.beian{
+    color: #000000;
+    text-decoration: none;
+}
+
+a.beian:hover{
+    text-decoration: underline;
+}
