车辆登记修改

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -26,7 +26,7 @@
     <div class="culture_text">
       <div class="snap_description">
         <h3>
-          年份
+          项目时间
         </h3>
         <%= format_date(@project.project_date, :year) -%>
         <br/>
