--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -154,8 +154,8 @@ ul.topnav li ul.subnav li {
 
 .content_l{
     float:left;
+    display: inline;
     width: 320px;
-    margin-right: 20px;
 }
 
 ul.box {
