罗总的修改意见

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -29,28 +29,28 @@
       <div class="bcont">
         <a href="<%= auto_link(1) -%>"><img src="/images/bp1.jpg"></a>
         <h3><a href="<%= auto_link(1) -%>" style="color: rgb(0, 0, 0);">自动化</a></h3>
-        <p style="color: rgb(102, 102, 102);">提供集控制、优化、调度、管理、经营于一体的综合自动化解决方案</p>
+        <p style="color: rgb(102, 102, 102);">工业自动化系统集成及各类机电工程承包，提供一站式的解决方案</p>
       </div>
     </li>
     <li style="background-image: url(/images/boxbg.jpg);">
       <div class="bcont">
         <a href="<%= auto_link(2) -%>"><img src="/images/bp2.jpg"></a>
         <h3><a href="<%= auto_link(2) -%>" style="color: rgb(0, 0, 0);">信息化</a></h3>
-        <p style="color: rgb(102, 102, 102);">提供公用工程信息化领域的产品、服务及智慧城市信息化解决方案</p>
+        <p style="color: rgb(102, 102, 102);">两化融合、公用事业MES系统开发</p>
       </div>
     </li>
     <li style="background-image: url(/images/boxbg.jpg);">
       <div class="bcont">
         <a href="<%= auto_link(3) -%>"><img src="/images/bp6.jpg"></a>
         <h3><a href="<%= auto_link(3) -%>" style="color: rgb(0, 0, 0);">智能化</a></h3>
-        <p style="color: rgb(102, 102, 102);">提供化工和建设工程方面的工程设计、咨询服务</p>
+        <p style="color: rgb(102, 102, 102);">智能建筑、智能小区、数字城市完整解决方案</p>
       </div>
     </li>
     <li style="background-image: url(/images/boxbg.jpg);">
       <div class="bcont">
         <a href="<%= auto_link(4) -%>"><img src="/images/bp3.jpg"></a>
         <h3><a href="<%= auto_link(4) -%>" style="color: rgb(0, 0, 0);">节能及维保</a></h3>
-        <p style="color: rgb(102, 102, 102);">提供数字化医院建设、区域卫生信息化、智能化健康管理解决方案</p>
+        <p style="color: rgb(102, 102, 102);">合同能源管理、节能评估、大型公共建筑的机电及智能化专业维保</p>
       </div>
     </li>
   </ul>
