--- a/app/views/main/culture.html.erb
+++ b/app/views/main/culture.html.erb
@@ -33,7 +33,7 @@
       <p>为员工构造健康的成长平台</p>
       <p>为社会承担应尽的责任</p>
       <strong>价值观</strong><br/>
-      <p>守信&nbsp;&nbsp;&nbsp;&nbsp;务实&nbsp;&nbsp;&nbsp;&nbsp;创新&nbsp;&nbsp;&nbsp;&nbsp;求精</p>
+      <p>以诚为本，思“创”为道</p>
       <strong>职业意识</strong><br/>
       <p>质量&nbsp;&nbsp;&nbsp;&nbsp;服务&nbsp;&nbsp;&nbsp;&nbsp;协作&nbsp;&nbsp;&nbsp;&nbsp;学习
         &nbsp;&nbsp;&nbsp;&nbsp;竞争&nbsp;&nbsp;&nbsp;&nbsp;危机&nbsp;&nbsp;&nbsp;&nbsp;敬业&nbsp;&nbsp;&nbsp;&nbsp;整体</p>
