--- a/app/views/main/introduction.html.erb
+++ b/app/views/main/introduction.html.erb
@@ -20,34 +20,28 @@
       </h3>
 
       <p>
-        南昌思创工程技术有限公司始创于1997年10月，是专业从事自动控制系统集成与服务、建筑智能化系统集成与服务、企业信息化系统集成与服务、节能及运维服务的高科技公司。
+        南昌思创工程技术有限公司始创于1997年10月， 以多技术融合为企业核心竞争力，是专业从事自动控制系统集成与服务、建筑智能化系统集成与服务、企业信息化系统集成与服务、节能及运维服务的高科技公司。
       </p>
 
       <p>
-        创业十多年来，思创工程不断探索，始终本着“实用、可靠、有效益、适度先进”的原则，以多技术融合为核心，根据项目实际需求，将先进的电气控制技术、
-        自动化技术、智能化技术、信息化技术及计算机网络技术与项目有机地结合起来，经过二次优化设计、设备采购成套、系统集成、软件开发、工程管理、
-        现场安装调试、竣工开车、技术培训、售后等全程服务，通过对设备的自动监控，对信息资源的智能管理和对客户的信息服务，实现与项目之间的优化组合，
-        为客户提供建设与服务全过程一站式的解决方案。
+        将先进的自动化技术、智能化技术、信息化技术进行集成开发和应用，实现高水准、全面性、专业化的项目管理，为客户
+        提供建设与服务全过程一站式的解决方案是思创公司的主要发展方向。
       </p>
 
       <p>
-        思创工程以人为本，重视员工的职业素养培养，认为富有“敬业、职业、专业”精神的员工是公司最大的财富。敬业精神是一种工作态度，职业精神是一种工作素质，
-        专业精神是一种工作技能。公司已拥有50多名中高级专业技术人才，大多获得“系统集成项目经理”、“机电工程建造师”等多项国家执业资格证书。
-      </p>
-
-      <p>
-        思创工程坚持全面型、工程化建设的发展理念，注重企业平台建设，已取得“电子工程专业承包”、“机电设备安装工程专业承包”、“建筑智能化工程专业承包”、
+        公司长期坚持全面型、工程化建设的发展理念，注重企业平台建设。目前已取得“电子工程专业承包”、“机电设备安装工程专业承包”、“建筑智能化工程专业承包”、
         “环保工程专业承包”以及“计算机信息系统集成”、“安全技术防范工程设计、施工”等多项资质，获得“守合同，重信用AAA”荣誉称号，
-        并一举通过了国家发改委组织的 “节能服务公司”资质认定。
+        并一举通过了国家发改委组织的 “节能服务公司”认定，成为江西省同行业著名企业。
       </p>
 
       <p>
-        经过十余年的健康发展，优秀的管理团队、专业的技术力量和完善的售后服务体系，保证了公司业务的迅速拓展。公司业务范围已涵盖自来水、
-        污水、水利、环保、有色、冶金、化工、城市交通、智能建筑等多个行业。目前公司注册资金1000万元，年营业额约8000万元，已成为省内自控行业的领军企业。
+        工矿企业过程控制自动化及城市公用事业建筑智能化是思创公司的两大核心业务板块，公司在市政、环保、水利、冶金、化工、城市交通、城市智能建筑等多个
+        行业拥有众多的大中型工程业绩。经过十余年的健康发展，依托于优秀的管理团队、专业的技术力量和完善的售后体系，思创公司已为众多行业客户提供了建设
+        与服务全过程一站式的解决方案，成为江西自控行业的领军企业。
       </p>
 
       <p>
-        未来，思创工程将一如既往地以诚为本，以变为道，奉行“更密切、更快捷、更高效、更全面、更专业”的服务理念，继续追求技术创新，
+        未来，思创工程将一如既往地以诚为本，思“创”为道，奉行“更密切、更快捷、更高效、更全面、更专业”的服务理念，继续追求技术创新，
         为客户提供高水准、全面性、专业化的服务为己任，致力于将公司打造成立足江西，辐射周边，面向全国的行业翘楚。
       </p>
 
