联系邮箱更改。

--- a/app/views/main/contact.html.erb
+++ b/app/views/main/contact.html.erb
@@ -19,7 +19,7 @@
         电话：0791-88101962<br/>
         传真：0791-88102305<br/>
         <br>
-        Email: <a href="mailto:strong@gmail.com">qiubinfeng@gmail.com</a></div>
+        Email: <a href="mailto:1471705155@qq.com">1471705155@qq.com</a></div>
       <div class="contact_page_form">
         <div class="contact_form_text_top">
           很高兴为您服务，方便的话请给我们留言以便我们的工作人员为您提供更贴心的服务。
