增加招聘消息

--- a/app/views/main/recruitment.html.erb
+++ b/app/views/main/recruitment.html.erb
@@ -8,8 +8,24 @@
 </div>
 <div class="content_area">
   <div class="content_mid_area">
-    <div class="content_text_area" style="min-height: 280px;">
-      暂无数据
+    <div class="content_text_area" style="min-height: 280px; padding-left:35px;">
+      <h2 style="border-bottom:1px dotted #cccccc;width: 820px;">注册一级建造师</h2>
+      <br/>
+      <div style="text-align: left;font-weight: bold;">
+        职位描述
+      </div>
+      <div style="text-align: left;margin-top: 10px; line-height: 22px;">
+        首要类别：自动化控制、机电安装、建筑智能化<br>
+        工作地点：南昌<br>
+        月薪范围：面议<br>
+        招聘人数：若干<br>
+        职责描述：<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        机电相关专业毕业，大学专科或以上学历,有注册一级建造师资格证。<br>
+        <br/>
+        有意者请将简历及资格证书扫面件发送至邮箱<a href="mailto:1471705155@qq.com">1471705155@qq.com</a>
+        <br/>
+        或致电 0791-8810 3293
+      </div>
     </div>
   </div>
   <div class="content_bottom"></div>
