add a new ceo pic.

--- a/app/views/main/ceo.html.erb
+++ b/app/views/main/ceo.html.erb
@@ -1,4 +1,4 @@
-<!--<script type="text/javascript" src="/jquery/js/rotator.js"></script>-->
+﻿<!--<script type="text/javascript" src="/jquery/js/rotator.js"></script>-->
 <div class="conten_heading">
   <div class="page_heading">
     优秀的管理团队、专业的技术力量和完善的售后服务体系
@@ -18,7 +18,7 @@
       <h3 style="top: -2px; left: -2px; font-size: 14px;border-bottom: 1px solid #DBDBDB;">
         总经理致辞
       </h3>
-      <!--<img src="/images/spirit.jpg" width="451" height="283">-->
+      <img src="/images/ceo.png" width="168" height="227" style="float:right;margin-top:10px;">
       <p style="text-indent: 0;">各位同仁：</p>
       <p>1997年10月，“思创”号的小船起航了！</p>
       <p>流光岁月，一路上，有阳光、鲜花与掌声，也历经风雨、暗礁与骇浪。“思创”依然前行，并且由小变大！</p>
