update the middle pic. and add a new middle pic.

--- a/app/views/main/ceo.html.erb
+++ b/app/views/main/ceo.html.erb
@@ -10,7 +10,7 @@
 <div class="content_area">
   <div class="content_mid_area">
     <div class="culture_banner">
-      <img src="/images/culture.jpg" width="902" height="238">
+      <img src="/images/culture.png" width="902" height="238">
     </div>
 
     <%= render :partial => "left_menu" -%>
