--- a/app/views/projects/case_list.html.erb
+++ b/app/views/projects/case_list.html.erb
@@ -1,4 +1,4 @@
-<!--<script type="text/javascript" src="/jquery/js/rotator.js"></script>-->
+﻿<!--<script type="text/javascript" src="/jquery/js/rotator.js"></script>-->
 <div class="conten_heading">
   <div class="page_heading">
 
@@ -10,7 +10,7 @@
 <div class="content_area">
   <div class="content_mid_area">
     <div class="culture_banner">
-      <img src="/images/culture.jpg" alt="Our Culture" width="902" height="238">
+      <img src="/images/culture.png" alt="Our Culture" width="902" height="238">
     </div>
 
     <%= render :partial => "/main/left_menu" -%>
