exchange 2 pic on service page & projects page.

--- a/app/views/main/projects.html.erb
+++ b/app/views/main/projects.html.erb
@@ -1,4 +1,4 @@
-<div class="conten_heading">
+﻿<div class="conten_heading">
   <div class="page_heading">
     我们用心做好每一个项目
   </div>
@@ -29,7 +29,7 @@
 <div class="content_area">
   <div class="content_mid_area">
     <div class="culture_banner">
-      <img src="/images/culture.jpg" alt="Our Culture" width="902" height="238">
+      <img src="/images/culture.png" alt="Our Culture" width="902" height="238">
     </div>
 
     <%= render :partial => "left_menu" -%>
